# src/api/models/ProfileImageResponseDto.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Travel App API
+ * API for managing travel itineraries, locations, and social interactions
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * Response object containing the profile image URL
+ * @export
+ * @interface ProfileImageResponseDto
+ */
+export interface ProfileImageResponseDto {
+    /**
+     * URL of the profile image
+     * @type {string}
+     * @memberof ProfileImageResponseDto
+     */
+    imageUrl?: string;
+}
+
+/**
+ * Check if a given object implements the ProfileImageResponseDto interface.
+ */
+export function instanceOfProfileImageResponseDto(value: object): value is ProfileImageResponseDto {
+    return true;
+}
+
+export function ProfileImageResponseDtoFromJSON(json: any): ProfileImageResponseDto {
+    return ProfileImageResponseDtoFromJSONTyped(json, false);
+}
+
+export function ProfileImageResponseDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): ProfileImageResponseDto {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'imageUrl': json['imageUrl'] == null ? undefined : json['imageUrl'],
+    };
+}
+
+export function ProfileImageResponseDtoToJSON(json: any): ProfileImageResponseDto {
+    return ProfileImageResponseDtoToJSONTyped(json, false);
+}
+
+export function ProfileImageResponseDtoToJSONTyped(value?: ProfileImageResponseDto | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'imageUrl': value['imageUrl'],
+    };
+}
+
