# src/api/models/index.ts
@@ -8,4 +8,8 @@ export * from './ItinerarySearchResponseDto';
 export * from './LikeDto';
 export * from './LikeResponseDto';
 export * from './LocationDto';
+export * from './LocationImageUploadResponseDto';
+export * from './MessageResponseDto';
+export * from './ProfileImageResponseDto';
+export * from './ProfileImageUploadResponseDto';
 export * from './UserDto';
